added triredditclone project

--- a/home.html
+++ b/home.html
@@ -396,7 +396,7 @@
                   </div><!-- /.links -->
                   <img src="assets/images/works/trailmix.png" alt="image">
                   <div class="portfolio-info">
-                    <h3>Portfolio Title</h3>
+                    <h3>Trail Mix</h3>
                   </div><!-- /.portfolio-info -->
                 </div><!-- /.portfolio -->
               </div><!-- /.portfolio-bg -->
@@ -411,22 +411,22 @@
                   </div><!-- /.links -->
                   <img src="assets/images/works/chirpalert.png" alt="image">
                   <div class="portfolio-info">
-                    <h3>Portfolio Title</h3>
+                    <h3>Chirp Alert</h3>
                   </div><!-- /.portfolio-info -->
                 </div><!-- /.portfolio -->
               </div><!-- /.portfolio-bg -->
             </div><!-- /.portfolio-item -->
-            <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "identety", "design"]'>
+            <div class="portfolio-item col-xs-12 col-sm-4 col-md-3" data-groups='["all", "frontend", "webkit-animation-delay"]'>
               <div class="portfolio-bg">
                 <div class="portfolio">
                   <div class="tt-overlay"></div>
                   <div class="links">
-                    <a class="image-link" href="assets/images/works/portfolio-4.jpg"><i class="fa fa-search-plus"></i></a>
-                    <a href="#"><i class="fa fa-link"></i></a>
+                    <a class="image-link" href="assets/images/works/triredditclone.png"><i class="fa fa-search-plus"></i></a>
+                    <a href="https://triredditclone.firebaseapp.com"><i class="fa fa-link"></i></a>
                   </div><!-- /.links -->
-                  <img src="assets/images/works/portfolio-4.jpg" alt="image">
+                  <img src="assets/images/works/triredditclone.png" alt="image">
                   <div class="portfolio-info">
-                    <h3>Portfolio Title</h3>
+                    <h3>Tri Reddit Clone</h3>
                   </div><!-- /.portfolio-info -->
                 </div><!-- /.portfolio -->
               </div><!-- /.portfolio-bg -->
@@ -683,7 +683,7 @@
           <div class="row">
             <div class="col-md-12">
               <h2>How could I put my skills to work for you?</h2>
-              <a href="#" class="btn btn-default">Let's Talk</a>
+              <a href="mailto:jennbbennett@hotmail.com" class="btn btn-default">Let's Talk</a>
             </div><!-- /.col-md-12 -->
           </div><!-- /.row -->
         </div><!-- /.container -->
@@ -693,7 +693,7 @@
 
 
     <!-- Contact Section -->
-    <section id="contact" class="contact-section section-padding">
+    <!-- <section id="contact" class="contact-section section-padding">
       <div class="container">
         <h2 class="section-title wow fadeInUp">Get in touch</h2>
 
@@ -725,10 +725,10 @@
 
                 <button type="submit" name="submit" class="btn btn-primary">Send Message</button>
               </form>
-            </div><!-- /.contact-form -->
+            </div><!-- /.contact-form --> -->
           </div><!-- /.col-md-6 -->
 
-          <div class="col-md-6">
+          <!-- <div class="col-md-6">
             <div class="row center-xs">
               <div class="col-sm-6">
                 <i class="fa fa-map-marker"></i>
@@ -745,7 +745,7 @@
                   (303) 578 6459<br>
                 </div>
               </div>
-            </div>
+            </div> -->
 
           <!-- <div class="row">
             <div class="col-sm-12">
