--- a/home.html
+++ b/home.html
@@ -90,7 +90,6 @@
 						<li><a href="#home">Home</a></li>
 						<li><a href="#about">About</a></li>
 						<li><a href="#resume">Resume</a></li>
-						<li><a href="#skills">Skills</a></li>
 						<li><a href="#works">Projects</a></li>
 						<li><a href="#hire">Contact</a></li>
 					</ul>
@@ -164,7 +163,7 @@
 
 					<div class="download-button">
 						<a class="btn btn-info btn-lg" href="mailto:jennbbennett@hotmail.com"><i class="fa fa-paper-plane"></i>Send me a message</a>
-						<a class="btn btn-primary btn-lg" href="https://resume.creddle.io/resume/7ibhi7ik2sq"><i class="fa fa-download"></i>Download my resume</a>
+						<a class="btn btn-primary btn-lg" href="assets/jennbbennett-resume.pdf"><i class="fa fa-download"></i>Download my resume</a>
 					</div>
 				</div>
 
