adjusted image size and font in project modals

--- a/home.html
+++ b/home.html
@@ -521,7 +521,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="copyright text-center">
-						<p>&copy; TrendyTheme 2015. All rights reserved.</p>
+						<p>&copy; Crafted in Colorado, Jennifer Bennett 2016</p>
 					</div>
 				</div>
 			</div>
