--- a/home.html
+++ b/home.html
@@ -111,7 +111,7 @@
 				<div class="col-md-4 col-md-push-8">
 					<div class="biography">
 						<div class="myphoto">
-							<img src="assets/images/jenn.jpg" alt="my photo">
+							<img src="assets/images/jenn.png" alt="my photo">
 						</div>
 						<ul>
 							<li>
